# discord-voicebot

./: .env.example  .gitignore  LICENSE  README.md  requirements.txt
voicebot/: pyproject.toml  run.py
voicebot/discord_vc_sinks/: audio_sinks.py
voicebot/discord_vc_tools/: audio_api.py
voicebot/gcloud_api/: gcloud_models.py
voicebot/openai_api/: openai_client.py  openai_model.py  openai_models.py
voicebot/speech_to_text/: whisper_stt.py
voicebot/voice_assistant/: agent.py  assistant.py  logging_config.py
voicebot/voicebot/: voicebot.py
voicebot/voicebot_api/: voicebot.py
