[tool.poetry]
name = "voicebot"
version = "0.1.0"
description = ""
authors = ["bisd98 <107929119+bisd98@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
openai = "^1.13.3"
numpy = "^1.26.4"
pynacl = "^1.5.0"
torch = "^2.4.1"
torchaudio = "^2.4.1"
transformers = "^4.45.1"
openai-whisper = "^20240930"
librosa = "^0.10.2.post1"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
